Bug 476373 - Unreadable icon in Markdown editor toggle

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
@@ -548,11 +548,13 @@ a.breadcrumb.currentLocation {
 	padding-left: 3px;
 	padding-right: 2px;
 	background-color: #FFF;
+	color: #333;
 }
 
 .orionSwitchInner:after {
 	padding-right: 3px;
 	background-color: #eee;
+	color: #333;
 	text-align: right;
 }
 
